[gd_scene load_steps=27 format=3 uid="uid://c76byv85cp5x"]

[ext_resource type="PackedScene" uid="uid://yy46yjk7hneq" path="res://Scene/sheep.tscn" id="1_cauor"]
[ext_resource type="Script" path="res://Scripts/UI.gd" id="2_88lia"]
[ext_resource type="PackedScene" path="res://Assets_in_Progress/HomeLevel_Collision.tscn" id="2_pjo7m"]
[ext_resource type="PackedScene" uid="uid://4jhfr1awtoff" path="res://Assets_in_Progress/DeerCreature.glb" id="4_fae0y"]
[ext_resource type="PackedScene" uid="uid://c0ybbylj6udig" path="res://Scene/Menus/pause_menu.tscn" id="5_j448v"]
[ext_resource type="PackedScene" uid="uid://ci38xxr56lxkh" path="res://Scene/Menus/HUD.tscn" id="6_ik6h8"]
[ext_resource type="Script" path="res://Scripts/newEnemy.gd" id="6_ksiss"]
[ext_resource type="Script" path="res://Scripts/equipManager.gd" id="8_hhspb"]
[ext_resource type="PackedScene" uid="uid://b5ai527yj2ch2" path="res://Scene/PlayerV2.tscn" id="8_xriv4"]
[ext_resource type="Script" path="res://gameManager.gd" id="10_ao2ib"]
[ext_resource type="PackedScene" uid="uid://mj1lf4vs855t" path="res://Scene/enemy.tscn" id="10_vx0s0"]
[ext_resource type="PackedScene" uid="uid://c6sw3pd5cr7uu" path="res://Scene/IbexHorn.tscn" id="12_u1wl3"]
[ext_resource type="AudioStream" uid="uid://c88x7a50ny2tk" path="res://Assets_in_Progress/foley/walk-on-grass-1-291984.mp3" id="13_ve3wr"]
[ext_resource type="AudioStream" uid="uid://bhhf6i72l3eft" path="res://Assets_in_Progress/foley/forest-sounds.mp3" id="14_pwkd4"]
[ext_resource type="AudioStream" uid="uid://bycuh8fmsv5lo" path="res://Assets_in_Progress/music/1m_mysterious.mp3" id="15_8saoo"]
[ext_resource type="AudioStream" uid="uid://c13t4w5mny3uj" path="res://Assets_in_Progress/music/a_little_bit_intense_bassy.mp3" id="16_6gbos"]
[ext_resource type="AudioStream" uid="uid://dvynxm7wuqstk" path="res://Assets_in_Progress/music/distorted_upbeat_fight.mp3" id="17_udguf"]
[ext_resource type="AudioStream" uid="uid://dqt50ye5wgncd" path="res://Assets_in_Progress/music/here_comes_the_ram.mp3" id="18_knjw2"]
[ext_resource type="AudioStream" uid="uid://bnmxu285a4myn" path="res://Assets_in_Progress/music/in_my_life.mp3" id="19_1fg10"]
[ext_resource type="AudioStream" uid="uid://bochif6qe4vvg" path="res://Assets_in_Progress/music/ramthesheep.mp3" id="20_xh3d4"]
[ext_resource type="AudioStream" uid="uid://cpfokuoyu0is3" path="res://Assets_in_Progress/music/take_a_ram_at_me.mp3" id="21_kn8px"]

[sub_resource type="PlaneMesh" id="PlaneMesh_7x2ak"]
size = Vector2(200, 200)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_x4l04"]
data = PackedVector3Array(100, 0, 100, -100, 0, 100, 100, 0, -100, -100, 0, 100, -100, 0, -100, 100, 0, -100)

[sub_resource type="BoxMesh" id="BoxMesh_w5nck"]

[sub_resource type="Environment" id="Environment_h2xa8"]
ambient_light_source = 2
ambient_light_color = Color(0.688982, 0.88516, 0.989466, 1)
ambient_light_energy = 0.33

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_3ligo"]
stream_count = 9
stream_0 = ExtResource("15_8saoo")
stream_1 = ExtResource("16_6gbos")
stream_2 = ExtResource("17_udguf")
stream_3 = ExtResource("18_knjw2")
stream_4 = ExtResource("19_1fg10")
stream_5 = ExtResource("20_xh3d4")
stream_6 = ExtResource("21_kn8px")
stream_7 = ExtResource("16_6gbos")
stream_8 = ExtResource("15_8saoo")

[node name="World1" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.70092, 0)

[node name="Sheep" parent="." instance=ExtResource("1_cauor")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50.156, 10.8643, 46.7432)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PLAYERHUD" parent="CanvasLayer" instance=ExtResource("6_ik6h8")]
offset_left = 22.0
offset_top = 23.0
offset_right = 62.0
offset_bottom = 63.0
mouse_filter = 1
script = ExtResource("2_88lia")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.858065, 0.513541, 0, -0.513541, 0.858065, 3.26585, 10.9196, 11.4805)
shadow_enabled = true
sky_mode = 1

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -20.8381, 0)
mesh = SubResource("PlaneMesh_7x2ak")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_x4l04")

[node name="EnemyRam" parent="." instance=ExtResource("10_vx0s0")]
transform = Transform3D(-0.999955, 0, 0.00951189, 0, 1, 0, -0.00951189, 0, -0.999955, 24.4507, 0.0927792, 21.205)
script = ExtResource("6_ksiss")

[node name="DeerCreature" parent="." instance=ExtResource("4_fae0y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.288, 0, 14.706)

[node name="Objects" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Objects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60169, -7.57958)
mesh = SubResource("BoxMesh_w5nck")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_h2xa8")

[node name="HomeLevel_01" parent="." instance=ExtResource("2_pjo7m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50.156, 0, 30.236)

[node name="Pause_Menu" parent="." instance=ExtResource("5_j448v")]
process_mode = 3
visible = false

[node name="EquipManager" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_hhspb")

[node name="Player" parent="." instance=ExtResource("8_xriv4")]

[node name="AudioListener3D" type="AudioListener3D" parent="Player"]
current = true

[node name="GameManager" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("10_ao2ib")

[node name="IbexHorn" parent="." instance=ExtResource("12_u1wl3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 43.8545, 0, 39.5568)

[node name="run_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_ve3wr")
volume_db = -16.365

[node name="forest_sounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_pwkd4")
volume_db = -37.0
autoplay = true

[node name="music" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPlaylist_3ligo")
autoplay = true
